# canonical_expansion

./: CMakeLists.txt  Dockerfile  FindGMP.cmake  README.md  main.cpp
report/: report.tex
src/: algorithms.cpp  algorithms.h  main.cpp
